--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,11 +5,13 @@ spring:
     name: CloudVault
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://116.198.242.154:3306/CloudVault?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://116.198.242.154:3306/CloudVault?useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 'Chad@20021231'
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
   redis:
     host: 121.40.204.51
     port: 6379
@@ -20,6 +22,8 @@ spring:
         max-idle: 10
         min-idle: 1
         time-between-eviction-runs: 10s
+        #application.yml文件配置
+
 
 mybatis-plus:
   type-aliases-package: org.chad.cloudvault.domain.po
